k8s/deployment-redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
