k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stpl
    spec:
      containers:
      - name: stpl
        image: luebken/stpl
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
