k8s/resources.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stpl
    spec:
      containers:
      - name: stpl
        image: luebken/stpl
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stpl
spec:
  selector:
    app: stpl
  ports:
  - port: 8080
  type: NodePort
