k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stpl
spec:
  selector:
    app: stpl
  ports:
  - port: 8080
  type: NodePort
