k8s/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: stpl-route
spec:
  to:
    kind: Service
    name: stpl
